--- a/src/index.css
+++ b/src/index.css
@@ -6,22 +6,30 @@
 
 @layer components {
   .borderTop {
-    @apply border-t-[1px] border-t-designColor;
+    @apply border-t-[1px] border-t-zinc-800;
   }
   
   .borderBottom {
-    @apply border-b-[1px] border-b-designColor;
+    @apply border-b-[1px] border-b-zinc-800;
   }
 
   .borderRight {
-    @apply border-r-[1px] border-r-designColor;
+    @apply border-r-[1px] border-r-zinc-800;
   }
 
   .borderLeft {
-    @apply border-l-[1px] border-l-designColor;
+    @apply border-l-[1px] border-l-zinc-800;
   }
 
   .borderAll {
-    @apply border-[1px] border-designColor;
+    @apply border-[1px] border-zinc-800;
   }
+
+  .aboutRightLi {
+    @apply text-zinc-400 text-base font-normal flex justify-between items-center border-b-[1px] border-gray-800 py-2;
+  }
+  .aboutRightLiSpan {
+    @apply bg-designColor text-black px-4 py-[1px] rounded-md;
+  }
+
 }
